Mobile horizontal scroll fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,17 +5,18 @@
   padding: 0;
   font-size: 16px;
 }
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: #151515;
-}
-html {
-  scroll-behavior: smooth;
-}
 html,
 body {
   max-width: 100%;
   overflow-x: hidden;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #151515;
+  position: relative;
+}
+html {
+  scroll-behavior: smooth;
 }
 
 ul {
